--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -27,6 +27,7 @@
     </mat-drawer>
   
     <div class="sidenav-content">
+        <app-header></app-header>
       <button class="menu mat-elevation-z8" type="button" mat-button (click)="drawer.toggle()" mat-icon-button>
         <mat-icon>menu</mat-icon>
       </button>
