--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div class="container">
+    <form class="form mat-elevation-z8">
+
+        <h1>Helpdesk</h1>
+
+        <img src="assets/img/login-image.svg" alt="Helpdesk">
+
+        <mat-form-field class="full-width" appearance="fill">
+          <mat-label>E-mail</mat-label>
+          <input matInput placeholder="Ex. user@mail.com">
+        </mat-form-field>
+
+        <mat-form-field class="full-width" appearance="fill">
+            <mat-label>Senha</mat-label>
+            <input type="password" matInput placeholder="Ex. 123456">
+          </mat-form-field>
+
+          <button class="full-width mat-elevation-z4" mat-stroked-button color="primary">Primary</button>
+    </form>
+</div>
+  
