--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -6,7 +6,7 @@
 
   <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Lucas" #input>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Ronaldo" #input>
   </mat-form-field>
 
   <div class="mat-elevation-z8">
