--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,37 +4,59 @@
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Helpdesk">
 
         <section class="section">
-            <mat-checkbox class="margin">Admin</mat-checkbox>
-            <mat-checkbox class="margin">Cliente</mat-checkbox>
-            <mat-checkbox class="margin">Tecnico</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Admin</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Cliente</mat-checkbox>
+            <mat-checkbox class="margin" color="primary">Tecnico</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="Ex.. Ronaldo">
+            <input 
+                [formControl]="nome"
+                required  
+                matInput
+                maxlength="50" 
+                placeholder="Ex.. Ronaldo"
+            >
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>CPF</mat-label>
-            <input matInput placeholder="Ex.. 000.000.000-00">
+            <input
+                [formControl]="cpf"
+                required 
+                matInput 
+                mask="000.000.000-00"
+                placeholder="Ex.. 000.000.000-00"
+            >
             <mat-icon matSuffix>pin</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>E-mail</mat-label>
-            <input matInput placeholder="Ex.. ronaldo@mail.com">
+            <input
+                [formControl]="email"
+                required 
+                matInput 
+                placeholder="Ex.. ronaldo@mail.com"
+            >
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Senha</mat-label>
-            <input matInput placeholder="Ex.. 1234">
+            <input
+                [formControl]="senha"
+                required 
+                matInput 
+                placeholder="Ex.. 1234"
+            >
             <mat-icon type="password" matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastar</button>
-        <button class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+        <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
+        <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
     <p class="fullWidth">by curso Angular</p>
