--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,14 +4,16 @@
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Helpdesk">
 
         <section class="section">
-            <mat-checkbox class="margin" color="primary">Admin</mat-checkbox>
-            <mat-checkbox class="margin" color="primary">Cliente</mat-checkbox>
-            <mat-checkbox class="margin" color="primary">Tecnico</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(0)" class="margin" color="primary">Admin</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)" class="margin" color="primary">Cliente</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" class="margin" color="primary">Tecnico</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome</mat-label>
-            <input 
+            <input
+                [(ngModel)]="tecnico.nome"
+                name="nome" 
                 [formControl]="nome"
                 required  
                 matInput
@@ -24,6 +26,8 @@
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>CPF</mat-label>
             <input
+                [(ngModel)]="tecnico.cpf"
+                name="cpf" 
                 [formControl]="cpf"
                 required 
                 matInput 
@@ -36,6 +40,8 @@
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>E-mail</mat-label>
             <input
+                [(ngModel)]="tecnico.email"
+                name="email" 
                 [formControl]="email"
                 required 
                 matInput 
@@ -47,15 +53,18 @@
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Senha</mat-label>
             <input
+                [(ngModel)]="tecnico.senha"
+                name="senha" 
                 [formControl]="senha"
                 required 
-                matInput 
+                matInput
+                type="password" 
                 placeholder="Ex.. 1234"
             >
-            <mat-icon type="password" matSuffix>password</mat-icon>
+            <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
+        <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
         <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
