--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -11,37 +11,42 @@
 
   <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource">
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> Id </th>
           <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
     
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="nome">
           <th mat-header-cell *matHeaderCellDef> Nome </th>
           <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
         </ng-container>
     
-        <ng-container matColumnDef="weight">
+        <ng-container matColumnDef="cpf">
           <th mat-header-cell *matHeaderCellDef> CPF </th>
           <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
         </ng-container>
     
-        <ng-container matColumnDef="symbol">
+        <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef> Email </th>
           <td mat-cell *matCellDef="let element"> {{element.email}} </td>
         </ng-container>
 
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef> Ações </th>
-          <td mat-cell *matCellDef="let element"> Ações </td>
+          <td mat-cell *matCellDef="let element"> 
+            <a routerLink="">
+              <i class="material-icons edit">edit</i>
+            </a>
+            <a routerLink="">
+              <i class="material-icons delete">delete</i>
+            </a>
+          </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
-        
-      </mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>    
 </div>
