--- a/src/app/components/chamado/chamado-create/chamado-create.component.css
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.css
@@ -13,6 +13,10 @@ h1, img, p {
     text-align: center;
 }
 
+img {
+    height: 15rem;
+}
+
 .status-prioridade {
     display: flex;
     justify-content: space-between;
