--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -37,7 +37,7 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um técnico</mat-label>
             <mat-select [formControl]="tecnico" required>
-              <mat-option value="0">Lucas</mat-option>
+              <mat-option *ngFor="let tec of tecnicos" value="{{ tec.id }}">{{ tec.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -46,7 +46,7 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um cliente</mat-label>
             <mat-select [formControl]="cliente" required>
-              <mat-option value="0">Ronaldo</mat-option>
+              <mat-option *ngFor="let cli of clientes" value="{{ cli.id }}">{{ cli.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -64,7 +64,7 @@
         </mat-form-field>
     </form>
 
-    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
     <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="full-width">Curso de Angular</p>
