--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -6,17 +6,25 @@
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Título do chamado</mat-label>
           <input
+            [(ngModel)]="chamado.titulo"
+            name="titulo"
             [formControl]="titulo"
             required
             matInput 
-            placeholder="Ex. Trocar bateria de notebook">
+            placeholder="Ex. Trocar bateria de notebook"
+          >
         </mat-form-field>
     </form>
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
             <mat-label>Selecione um status</mat-label>
-            <mat-select [formControl]="status" required>
+            <mat-select
+              [(ngModel)]="chamado.status"
+              name="status" 
+              [formControl]="status" 
+              required
+            >
               <mat-option value="0">ABERTO</mat-option>
               <mat-option value="1">EM ANDAMENTO</mat-option>
               <mat-option value="2">ENCERRADO</mat-option>
@@ -25,7 +33,12 @@
 
         <mat-form-field appearance="outline">
             <mat-label>Selecione uma prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select
+              [(ngModel)]="chamado.prioridade"
+              name="prioridade" 
+              [formControl]="prioridade" 
+              required
+            >
               <mat-option value="0">BAIXA</mat-option>
               <mat-option value="1">MÉDIA</mat-option>
               <mat-option value="2">ALTA</mat-option>
@@ -36,7 +49,12 @@
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um técnico</mat-label>
-            <mat-select [formControl]="tecnico" required>
+            <mat-select
+              [(ngModel)]="chamado.tecnico"
+              name="tecnico" 
+              [formControl]="tecnico" 
+              required
+            >
               <mat-option *ngFor="let tec of tecnicos" value="{{ tec.id }}">{{ tec.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
@@ -45,7 +63,12 @@
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um cliente</mat-label>
-            <mat-select [formControl]="cliente" required>
+            <mat-select
+              [(ngModel)]="chamado.cliente"
+              name="cliente" 
+              [formControl]="cliente" 
+              required
+            >
               <mat-option *ngFor="let cli of clientes" value="{{ cli.id }}">{{ cli.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
@@ -53,11 +76,13 @@
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Deixe uma descrição</mat-label>
+          <mat-label>Deixe uma observação</mat-label>
           <textarea
-            [formControl]="descricao"
+            [(ngModel)]="chamado.observacoes"
+            name="observacoes"
+            [formControl]="observacoes"
             required
-            class="descricao" 
+            class="observacoes" 
             matInput 
             placeholder="Ex. trocar fonte de notebook queimada...">
           </textarea>
