--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -18,7 +18,7 @@
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
-            <mat-label>Selecione um status</mat-label>
+            <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
             <mat-select
               [(ngModel)]="chamado.status"
               name="status" 
@@ -32,7 +32,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label>Selecione uma prioridade</mat-label>
+            <mat-label>{{ retornaPrioridade(chamado.prioridade) }}</mat-label>
             <mat-select
               [(ngModel)]="chamado.prioridade"
               name="prioridade" 
@@ -48,7 +48,7 @@
 
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um técnico</mat-label>
+            <mat-label>{{ chamado.nomeTecnico }}</mat-label>
             <mat-select
               [(ngModel)]="chamado.tecnico"
               name="tecnico" 
@@ -62,7 +62,7 @@
 
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um cliente</mat-label>
+            <mat-label>{{ chamado.nomeCliente }}</mat-label>
             <mat-select
               [(ngModel)]="chamado.cliente"
               name="cliente" 
@@ -89,7 +89,7 @@
         </mat-form-field>
     </form>
 
-    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
+    <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
     <button routerLink="../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="full-width">Curso de Angular</p>
